--- a/gui/Data-Visualizer-React/package.json
+++ b/gui/Data-Visualizer-React/package.json
@@ -1,50 +1,87 @@
 {
-  "name": "react-template",
+  "name": "quflx-data-visualizer",
+  "version": "2.0.0",
+  "description": "QuFLX Trading Data Visualizer with Redis Integration",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "packageManager": "pnpm@10.10.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint ./src --quiet",
-    "preview": "vite preview",
-    "test": "vitest"
-  },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@metagptx/vite-plugin-source-locator": "latest",
-    "@mui/material": "^6.0.2",
-    "@supabase/supabase-js": "^2.47.12",
-    "@types/prop-types": "^15.7.14",
-    "lightweight-charts": "^4.2.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.1",
-    "recharts": "^2.15.1",
-    "socket.io-client": "^4.8.1",
-    "technicalindicators": "^3.1.0"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "lightweight-charts": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "redis": "^4.7.1",
+    "socket.io-client": "^4.7.2",
+    "supabase": "^1.0.0",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "test:redis": "jest --testPathPattern=src/__tests__/redis",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "analyze": "npm run build && npx bundle-analyzer build/static/js/*.js"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "rules": {
+      "no-console": "warn",
+      "no-unused-vars": "warn",
+      "prefer-const": "error"
+    }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "jsdom": "^27.0.1",
-    "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1",
-    "vitest": "^3.2.4"
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.8.4"
+  },
+  "proxy": "http://localhost:3001",
+  "homepage": ".",
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "keywords": [
+    "trading",
+    "forex",
+    "real-time",
+    "charts",
+    "redis",
+    "websocket",
+    "quflx"
+  ],
+  "author": "QuFLX Development Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/quflx/trading-platform"
+  },
+  "bugs": {
+    "url": "https://github.com/quflx/trading-platform/issues"
   }
 }
