--- a/gui/Data-Visualizer-React/package.json
+++ b/gui/Data-Visualizer-React/package.json
@@ -10,7 +10,7 @@
     "lightweight-charts": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redis": "^4.7.1",
     "socket.io-client": "^4.7.2",
     "supabase": "^1.0.0",
